Closed Bug 891239 Opened 11 years ago Closed 11 years ago

OmxPlugin.cpp:1027:35: error: expected ';' after top level declarator when using clang

Categories

(Core :: Audio/Video, defect)

All
Android
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: m_kato, Assigned: m_kato)

Details

Attachments

(1 file)

When using clang 3.2 in NDK r8e, the following build error occurs.

/home/makoto/Development/hg.mozilla.org/mobile-clang/media/omx-plugin/OmxPlugin.cpp:1027:35: error: expected ';' after top level declarator
Manifest MOZ_EXPORT MPAPI_MANIFEST {
                                  ^
                                  ;
7 warnings and 1 error generated.
make[1]: *** [OmxPlugin.o] Error 1
Attached patch fixSplinter Review
Attachment #772533 - Flags: review?(chris.double)
Attachment #772533 - Flags: review?(chris.double) → review+
https://hg.mozilla.org/mozilla-central/rev/b54eb8e2dbc7
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: