Bug 891239 - OmxPlugin.cpp:1027:35: error: expected ';' after top level declarator when using clang. r=doublec