media/omx-plugin/OmxPlugin.cpp
@@ -1024,7 +1024,7 @@ static bool CreateDecoder(PluginHost *aPluginHost, Decoder *aDecoder, const char
 } // namespace OmxPlugin
 
 // Export the manifest so MPAPI can find our entry points.
-Manifest MOZ_EXPORT MPAPI_MANIFEST {
+Manifest MOZ_EXPORT MPAPI_MANIFEST = {
   OmxPlugin::CanDecode,
   OmxPlugin::CreateDecoder
 };
